Implement auto-updater improvements, add app version display, and update package.json for versioning and GitHub configuration

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -83,6 +83,7 @@
 
         <footer>
             <div id="status" class="status-bar"></div>
+            <div id="appVersion" class="app-version"></div>
         </footer>
     </div>
     <script src="app.js"></script>
