--- a/renderer/index.html
+++ b/renderer/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Downloader</h1>
+            <h1>YouTube Downloader</h1>
         </header>
 
         <main>
